# MingLog

./: .eslintrc.js  .gitignore  API_INTEGRATION_REPORT.md  ARCHITECTURE_ANALYSIS_REPORT.md  BUILD_STATUS.md  CHANGELOG-v1.0.md  CHANGELOG.md  CLEANUP_REPORT.md  COMMUNITY_ENGAGEMENT_STRATEGY.md  COMPLETION_REPORT.md  CONTRIBUTING.md  DESKTOP_BUILD_REPORT.md  DEVELOPMENT_ROADMAP_2025.md  DEVELOPMENT_STATUS.md  DEVELOPMENT_SUMMARY.md  FINAL_DEVELOPMENT_SUMMARY.md  FINAL_RELEASE_CHECKLIST.md  FUNCTION_TEST_GUIDE.md  GIT_CLEANUP_REPORT.md  LICENSE  LOADING_ISSUE_FIX_REPORT.md  MAINTENANCE_GUIDE.md  MINGLOG_PROJECT_SUMMARY.md  MONITORING_AND_RESPONSE_PLAN.md  MingLog生产版本综合测试报告.md  MingLog问题诊断修复总结.md  NEXT_STEPS_PLAN.md  PLATFORM_ANNOUNCEMENTS.md  PROJECT_CLEANUP_REPORT.md  PROJECT_CLEANUP_REPORT_DETAILED.md  PROJECT_COMPLETION_REPORT.md  PROJECT_DELIVERY_REPORT.md  PROJECT_MANAGEMENT_2025.md  PROJECT_OVERVIEW.md  PROJECT_STATUS.md  QUICK_START_GUIDE.md  README-EN.md  README.md  RELEASE_ANNOUNCEMENT.md  RELEASE_CHECKLIST.md  (+70 more)
.github/workflows/: beta-release.yml  build-release.yml  build-tauri.yml  build-test.yml  development.yml  manual-build.yml  release-desktop.yml  release.yml  test-and-quality.yml  test-build.yml
apps/api/: .env.example  package.json  tsconfig.json
apps/desktop/: .gitignore  TAURI_MIGRATION_STATUS.md  TESTING_GUIDE.md  (+11 more)
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: main-complex.rs  main-simple.rs  main.rs  storage.rs
apps/desktop/src-tauri/src/commands/: app.rs  dialog.rs  fs.rs  mod.rs  storage.rs
apps/tauri-desktop/src-tauri/: Cargo-tauri.toml  Cargo.toml  create_ico.py  entitlements.plist  license.txt  tauri.conf.json
apps/tauri-desktop/src-tauri/capabilities/: default.json
apps/tauri-desktop/src-tauri/icons/: README.md  icon.icns
apps/tauri-desktop/src-tauri/migrations/: 004_performance_indexes.sql
apps/tauri-desktop/src-tauri/resources/: main.wxs
apps/tauri-desktop/src-tauri/src/: commands.rs  database.rs  error.rs  error_reporting.rs  error_testing.rs  file_operations.rs  file_system.rs  lib.rs  main.rs  models.rs  state.rs  sync.rs  updater.rs
apps/tauri-desktop/src-tauri/src/commands/: integration_tests.rs  tests.rs
apps/tauri-desktop/src-tauri/src/database/: integration_tests.rs  simple_tests.rs  tests.rs  unit_tests.rs
apps/tauri-desktop/src-tauri/src/deployment/: rollback.rs
apps/tauri-desktop/src-tauri/src/feature_flags/: mod.rs
apps/tauri-desktop/src-tauri/src/file_operations/: tests.rs
apps/tauri-desktop/src-tauri/src/monitoring/: feedback.rs  mod.rs  performance.rs  sentry_config.rs
apps/tauri-desktop/src-tauri/templates/: installer.nsi  main.wxs
docs/: BUILD_WINDOWS.md  README.md  TAURI_DEVELOPMENT.md  all-in-one-design.md  all-in-one-gap-analysis-2025-01-09.md  all-in-one-implementation-plan-2025-01-09.md  all-in-one-summary.md  architecture-decision-recommendation.md  architecture.md  competitive-analysis-and-roadmap-2025-01-09.md  comprehensive-analysis-2025-01-09.md  deployment-checklist.md  developer-guide.md  development-prompts.md  development-roadmap-2025-01-14.md  development-roadmap.md  development.md  maintenance-guide.md  manual-testing-guide.md  next-phase-development-strategy-2025-01-09.md  notes-module-fix-summary.md  phase1-completion-summary.md  project-analysis-2025-01-09.md  project-analysis-summary-2025-01-09.md  project-cleanup-2025-01-09.md  project-cleanup-report-2025-01-10.md  project-comprehensive-analysis-2025-01-14.md  project-status-analysis-2025-01-10.md  project-summary-2025-01-14.md  release-guide.md  release-v1.0.0.md  roadmap.md  task-breakdown-2025-01-14.md  task-progress-tracker.md  tasks-module-development-plan.md  technical-architecture.md  technical-specification.md  user-guide-multilang.md  user-guide-zh-CN.md  user-guide.md  (+10 more)
minglog-simple/: package.json
release/: checksums.sha256
scripts/: auto-fix.js  build-production.js  build-production.ps1  build-production.sh  build-simple.ps1  build-tauri.ps1  build-test.ps1  build-windows.ps1  check-build-env.ps1  check-env.ps1  check-project.ps1  code-maintenance.js  create-distribution.ps1  create-module.js  create-simple-dist.ps1  diagnose-build.ps1  generate-icons.js  generate-icons.ps1  git-cleanup.js  install-rust-complete.ps1  install-rust-fast.ps1  install-rust-mirror-simple.ps1  install-rust-mirror.ps1  install-rust-simple.ps1  install-rust-tauri.ps1  module-dev-tools.js  monitor-builds.ps1  monitor-release.js  performance-benchmark.js  performance-optimization.js  project-cleanup.js  quality-check.js  release-beta.ps1  release-tauri.ps1  release.js  safe-cleanup.js  setup.sh  test-cross-platform.js  test-tauri.ps1  validate-build.ps1  (+3 more)
test_data/: sample-data.json
(+405 files in other folders)
