[package]
name = "minglog-desktop"
version = "0.1.0"
description = "MingLog - 现代化知识管理工具桌面版"
authors = ["MingLog Team <Dasein1997@outlook.com>"]
license = "MIT"
repository = "https://github.com/MMR-MINGriyue/MingLog"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

[[bin]]
name = "minglog-desktop"
path = "src/main.rs"
