[package]
name = "minglog-desktop"
version = "1.0.0"
description = "MingLog Desktop - Modern Knowledge Management Tool"
authors = ["MingLog Team <Dasein1997@outlook.com>"]
license = "MIT"
repository = "https://github.com/MMR-MINGriyue/MingLog"
edition = "2021"
default-run = "minglog-desktop"

[[bin]]
name = "simple_test"
path = "src/bin/simple_test.rs"

[[bin]]
name = "comprehensive_test"
path = "src/bin/comprehensive_test.rs"

[dependencies]
tauri = { version = "2.0", features = [ "protocol-asset", "tray-icon"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "chrono",
    "uuid",
    "json"
] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.10"
uuid = { version = "1.0", features = ["v4", "serde"] }
anyhow = "1.0"
thiserror = "1.0"
dirs = "5.0"
# File operations and Markdown processing
pulldown-cmark = "0.9"
serde_yaml = "0.9"

[dev-dependencies]
tempfile = "3.8"
futures = "0.3"
walkdir = "2.0"
zip = "0.6"
base64 = "0.21"
tokio-test = "0.4"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }
