[package]
name = "minglog-desktop"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "minglog-desktop"
edition = "2021"
rust-version = "1.60"

[[bin]]
name = "simple_test"
path = "src/bin/simple_test.rs"

[[bin]]
name = "comprehensive_test"
path = "src/bin/comprehensive_test.rs"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.2", features = [] }
rusqlite = { version = "0.29.0", features = ["bundled"] }
thiserror = "1.0"
chrono = "0.4"
reqwest = { version = "0.11", features = ["json"] }
sysinfo = "0.29.10"

[dev-dependencies]
tempfile = "3.8"
futures = "0.3"
walkdir = "2.0"
zip = "0.6"
base64 = "0.21"
tokio-test = "0.4"

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[features]
custom-protocol = ["tauri/custom-protocol"]
