[package]
name = "minglog-desktop"
version = "1.0.0"
description = "MingLog Desktop - Modern Knowledge Management Tool"
authors = ["MingLog Team <Dasein1997@outlook.com>"]
license = "MIT"
repository = "https://github.com/MMR-MINGriyue/MingLog"
default-run = "minglog-desktop"
edition = "2021"
rust-version = "1.60"

[[bin]]
name = "simple_test"
path = "src/bin/simple_test.rs"

[[bin]]
name = "comprehensive_test"
path = "src/bin/comprehensive_test.rs"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6", features = [ "api-all", "devtools", "system-tray"] }

sqlx = { version = "0.7.3", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
sysinfo = "0.29.10"
uuid = { version = "1.0", features = ["v4", "serde"] }
dirs = "5.0"
anyhow = "1.0"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "time"] }
log = "0.4"
env_logger = "0.10"
pulldown-cmark = "0.9"
serde_yaml = "0.9"
# sentry = { version = "0.32", features = ["backtrace", "contexts", "panic", "anyhow", "reqwest", "rustls"] }
# sentry-tauri = "0.2"
# whoami = "1.4"
# rustc_version_runtime = "0.3"

[dev-dependencies]
tempfile = "3.8"
futures = "0.3"
walkdir = "2.0"
zip = "0.6"
base64 = "0.21"
tokio-test = "0.4"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = "z"
strip = true
debug = false
codegen-units = 1
panic = "abort"
